--- a/location_app/pubspec.yaml
+++ b/location_app/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   shared_preferences: ^2.5.3
   provider: ^6.0.0
   http: ^0.13.6
+  image_picker: ^1.0.4
+  mime: ^1.0.4
+  path: ^1.8.3
  
 
 dev_dependencies:
